--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="assets/img/favicon.ico">
 
-  <title>Cui Hernandez</title>
+  <title>Cuautli Hernandez</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -34,12 +34,12 @@
 
   <div id="h">
     <div class="logo">
-      <h2>Cui Hernandez</h2>
+      <h2>Cuautli Hernandez</h2>
     </div><!--/logo-->
     <div class="container centered">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Hello, my name is <b>Cui Hernandez</b>.<br />I create for the web and mobile application.</h1>
+          <h1>Hello, my name is <b>Cuautli Hernandez</b>.<br />I create for the web and mobile application.</h1>
         </div>
       </div><!--/row-->
 
@@ -67,7 +67,7 @@
     <div class="row">
       <h2 class="centered mb">I craft handsome sites & stunning apps<br />that empower your startup.</h2>
       <div class="col-md-6">
-        <p>Hello, my name is Cui Ernandes.
+        <p>Hello, my name is Cuautli Ernandes.
         </p>
         <p>
           I am a highly skilled senior mobile developer. With my Bachelor of Computer Science degree from the University
