--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           <!-- Assuming general icon for Discord as it might not be available -->
           <a href="https://discordapp.com/users/cuiernandes"><i class="ion-chatbubbles"></i></a>
           <!-- GitHub icon -->
-          <a href="http://www.github.com/bluespiderdev"><i class="ion-social-github"></i></a>
+          <a href="http://www.github.com/cuihernandez"><i class="ion-social-github"></i></a>
         </div><!--/col-md-8-->
       </div>
     </div><!--/container-->
